--- a/tomcat_deploy.yml
+++ b/tomcat_deploy.yml
@@ -3,5 +3,5 @@
   tasks:
     - name: Deploy in tomcat
       copy:
-        src: target/my-war.war
+        src: target/maigolab_hello-1.0.0.jar
         dest: /opt/tomcat/webapps
